tighten up some of the wording in SwashRL.

--- a/_posts/2021-04-13-swashrl.md
+++ b/_posts/2021-04-13-swashrl.md
@@ -86,7 +86,7 @@ predictament carefully before taking any risks.
 Gameplay in a typical Roguelike is straightforward on the surface level but on
 close examination will require the player to take advantage of items and
 abilities that they've gained along the way, such as weapons, magic spells,
-cybernetic augmentations, mutations, _&c_.  Roguelikes are typically very
+cybernetic augmentations, mutations, _&c_.  Roguelikes are usually very
 difficult to complete, because many gameplay elements such as the ones I just
 named influence every decision you make, and [permanent failure][permadeath]
 means that the consequences of each decision are irreversible.
@@ -146,8 +146,8 @@ draw visual assets, which would otherwise consume a lot of time.
 However, when supporting multiple operating systems became a priority, I opted
 to translate this display into [SDL][SDL], which already supports multiple
 operating systems, allowing me to simulate a computer terminal in a graphical
-window.  My solution to this was to allow the game to support multiple methods
-of display depending on the user's preferences.
+window.  In its current form the game can run either in the terminal or in its
+own window which it draws itself, depending on the user's preference.
 
 [SDL]: https://en.wikipedia.org/wiki/Simple_DirectMedia_Layer
 
@@ -199,11 +199,11 @@ drawn sword."  You'll know swash as one half of the word
 
 I named it this way because I was frustrated with RPGs like The Elder Scrolls
 suffering from a lack of focus, emblematic of a trend in the games industry of
-supporting a number of play styles but excelling at any one core mechaic.  I
-wanted Swash to focus very strongly on sword combat because there's a lot of
+supporting a number of play styles but not excelling at any one core mechanic.
+I wanted Swash to focus very strongly on sword combat because there's a lot of
 interesting mechanics to be found in swordplay.  SwashRL was meant to be a
 prototype of this concept, though due to other obligations it hasn't gotten
-far enough to fully explore this concept.
+far enough to fully explore it.
 
 [swash def]: https://en.wikipedia.org/wiki/Swashbuckler#Etymology
 
@@ -224,13 +224,14 @@ much older game I wrote way back in high school called Crawl.  Crawl was a
 much more basic game bearing little resemblance to a traditional Roguelike,
 but the concept of it has stuck in my mind ever since, to such an extent that
 for a while writing a Roguelike was just the way I learned new programming
-languages.
+languages.  A later version of Crawl written in Python featured a map
+generator and field-of-vision not too dissimilar to what SwashRL has now.
 
-A later version of Crawl written in Python featured a map generator and
-field-of-vision not too dissimilar to what SwashRL has now.  The name had to
-be changed to avoid confusion with another classic game called
-[Linley's Dungeon Crawl][Crawl], being renamed to Slumbering Dragon,
-FORRNIF[^1], Spelunk!, and finally SwashRL.
+When I started working on the game in its current form I had to pick a new
+name for it to avoid confusion with another classic game called
+[Linley's Dungeon Crawl][Crawl].  Initially I named it Slumbering Dragon,
+which it turns out is also taken.  After that I renamed it to FORRNIF[^1],
+Spelunk!, and finally SwashRL.
 
 [Crawl]: https://en.wikipedia.org/wiki/Dungeon_Crawl_Stone_Soup#Linley's_Dungeon_Crawl
 
