add a sidebar & preview image to project pages.

--- a/_posts/2021-04-13-swashrl.md
+++ b/_posts/2021-04-13-swashrl.md
@@ -1,17 +1,18 @@
 ---
 layout: project
 title: SwashRL
-permalink: /projects/SwashRL/
+permalink: /projects/swashrl/
 spoof_url: /projects/
-image: /images/previews/swashrl.png
+thumbnail: /images/thumbnails/swashrl.png
+preview: /images/swashrl/screenshot.png
 version: 0.035
 license: BSD 3-clause
 license_link: https://github.com/swashdev/SwashRL/blob/802f68850588ccc4e9bae45141b2315988507ffe/LICENSE.txt
 downloads: https://github.com/swashdev/SwashRL/releases
-github: https://github.com/swashdev/SwashRL
+github: SwashRL
 website: https://swash.link/
 language: D
-tags: Roguelike RPG procedural-generation combat wip
+tags: Roguelike RPG procedural_generation combat wip
 systems: Linux
 ---
 
